--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,8 @@
 android.useAndroidX=true
 android.enableJetifier=true
+
+# Aumentar memoria de Gradle para compilar con Firebase
+org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configureondemand=true
